[package]
name = "twitter-api"
version = "0.5.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/twitter-api-rs"
description = "Unofficial Rust library for the Twitter API."
documentation = "https://gifnksm.github.io/twitter-api-rs"
edition = "2018"

[dependencies]
oauth-client = "0.5.2"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"

[dev-dependencies]
color-eyre = "0.5.11"
dirs = "3.0.2"

[badges]
maintenance = { status = "passively-maintained" }
