[package]
name = "twitter-api"
version = "0.5.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/twitter-api-rs"
description = "Unofficial Rust library for the Twitter API."
documentation = "https://gifnksm.github.io/twitter-api-rs"
edition = "2018"

[dependencies]
oauth-client = "0.5.2"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"

[dev-dependencies]
color-eyre = "0.6.2"
dirs = "4.0.0"

[badges]
maintenance = { status = "passively-maintained" }
