[package]
name = "twitter-api"
version = "0.6.0"
edition = "2021"
rust-version = "1.57.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/twitter-api-rs"
description = "Unofficial Rust library for the Twitter API."
documentation = "https://gifnksm.github.io/twitter-api-rs"

[dependencies]
oauth-client = { version = "0.8.0", default-features = false }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
thiserror = "1.0.31"

[dev-dependencies]
color-eyre = "0.6.2"
dirs = "5.0.0"
oauth-client = { version = "0.8.0", features = ["client-reqwest"] }

[badges]
maintenance = { status = "passively-maintained" }

[package.metadata.release]
pre-release-replacements = [
    { file = "README.md", search = "twitter-api = \"[0-9\\.]+\"", replace = "{{crate_name}} = \"{{version}}\"" }
]
